<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        app:title="@string/title_main"
        style="@style/Toolbar"/>

    <Button
        android:id="@+id/opn_phonebook"
        style="@style/MainButtons"
        android:text="@string/btn_open_phonebook"
        android:layout_marginTop="25dp"/>
    <Button
        android:id="@+id/opn_customview"
        style="@style/MainButtons"
        android:text="@string/btn_open_cust_view" />
    <Button
        android:id="@+id/opn_webpage"
        style="@style/MainButtons"
        android:text="@string/btn_open_web"/>


</LinearLayout>