<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/Toolbar"
        app:title="@string/title_add_contact"
        app:titleTextColor="@color/colorBtnTxt" />

    <RadioGroup
        android:id="@+id/rgTypeContact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/rbPhone"
            android:layout_marginTop="@dimen/default_margin_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_Phone"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/rbEmail"
            android:layout_marginTop="@dimen/default_margin_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_Email"
            />
    </RadioGroup>

    <EditText
        android:id="@+id/viewEditName"
        android:layout_marginTop="@dimen/default_margin_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:hint="@string/hint_Name" />

    <EditText
        android:id="@+id/viewEditContact"
        android:layout_marginTop="@dimen/default_margin_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:hint="@string/hint_Phone" />
</LinearLayout>